--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.4.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
