--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.7.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
